<resources>
    <string name="app_name">Checkers</string>
    <string name="app_name_long">Privacy Friendly Checkers</string>
    <string name="Dame">Checkers</string>

    <!-- ###MainActivity### -->
    <string name="chose_opponent">Choose your opponent:</string>
    <string name="game_type_human">Human</string>
    <string name="game_type_bot">Bot</string>
    <string name="new_game">New Game</string>
    <string name="menu_continue_game">Continue</string>
    <string name="OverwriteResumableGame">The resumable game will be overwritten if you continue.</string>
    <string name="OverwriteResumableGameTitle">Overwrite resumable game?</string>
    <string name="yes">yes</string>
    <string name="cancel">cancel</string>
    <string name="no_resumable_game">No resumable Game. Please start a new game</string>



    <!-- ###Game### -->
    <string name="pref_header_game">Game</string>
    <string name="pref_group_game">Game settings</string>

    <!-- ### Tutorial ###-->
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">Welcome to Privacy Friendly Checkers! This app is a board game for up to two players</string>
    <string name="slide2_heading">Game mode</string>
    <string name="slide2_text">Swipe or press the arrow buttons on the left and right to change the game mode. You can either play versus bot or versus player.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="okay">Okay</string>
    <string name="main_button_welcomedialog">Show Welcome</string>

    <!-- ###DRAWER###-->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main Menu</string>
    <string name="action_game">Checkers</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--###ABOUT###-->
    <string name="about">About</string>
    <string name="version_number">Version</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">Maksim Melnik, Marc Schneider</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with:</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Karlsruhe Institute of Technology. Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-dame">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>

    <!-- ###HELP### -->
    <string name="help">Help</string>
    <string name="help_whatis">What is Privacy Friendly Checkers?</string>
    <string name="help_whatis_answer">Privacy Firendly Checkers is an implementation of the board game checkers. Either two player play against each other or one player plays against a computer.</string>
    <string name="help_feature_one">Feature 1</string>
    <string name="help_feature_one_answer">Description of Feature 1</string>
    <string name="help_privacy">Why is this application privacy friendly?</string>
    <string name="help_privacy_answer">Privacy Friendly Checkers does not require additional permissions and it does not use advertisements.</string>
    <string name="help_permission">Which permissions does this application require?</string>
    <string name="help_permission_answer">None.</string>
    <string name="sHelpOverviewHeading">Overview</string>
    <string name="sHelpExample">Example Help Entry</string>
    <string name="sHelpCategoryExample">Example Help Category</string>
    <string name="sHelpPrivacyHeading">Privacy Info</string>
    <string name="sHelpPermissionsHeading">Permissions</string>
    <string name="sHelpPermissionsDescription">Privacy Friendly Checkers does not use any permissions</string>
    <string name="sHelpIntro">Welcome to the help page. This app is a variant of the famous board game Checkers. Along with the bot game mode it features a single device multiplayer.</string>
    <string name="sModesCategory">Game Mode</string>
    <string name="sModeSummary">The app features several game modes that can be accessed by either swiping in the main menu or tapping the arrow buttons</string>
    <string name="sMode1">Checkers - Bot game</string>
    <string name="sMode1Summary">This game mode features a game versus AI controlled bot.</string>
    <string name="sMode2">Checkers - Multiplayer</string>
    <string name="sMode2Summary">This game mode features the game for two players on single device.</string>
    <string name="sHelpMoveCategory">Moving</string>
    <string name="sHelpMoveTap">Moving by tapping</string>
    <string name="sHelpMoveTapSummary">You can move by tapping a figure once and then tapping the destination. By tapping the figure you will also get a highlighting for possible destinations.</string>
    <string name="sHelpWin">Winning the game</string>
    <string name="sHelpWinCondition">Win condition</string>
    <string name="sHelpWinSummary">The game is won when you ether capture all pieces of your opponent, or if your opponent cannot move any piece.</string>
    <string name="help_captures_title">Capturing</string>
    <string name="help_captures_descripting">Capturing is mandatory. A sequence must capture the maximum possible number of pieces. A regular piece can only capture forward, no backward capturing is allowed.</string>
    <string name="help_dame_title">King</string>
    <string name="help_dame_description">When a regular piece reaches the farthest row forward it gets promoted to a king. A king can move any number of fields in any direction. If the king captures, it lands one square behind the captured piece.</string>
    <string name="help_game_rules_title">Game Rules</string>
    <string name="help_game_setup_title">Game Play</string>
    <string name="help_game_setup_description">Checkers is played by two opponents, on opposite sides of the gameboard. One player has the dark pieces, the other has the light pieces. The white player begins the game and has to make a move, afterwards both players alternate taking turns. A player may not move an opponent\'s piece. A move consists of moving a piece diagonally to an adjacent unoccupied square. If the adjacent square contains an opponent\'s piece, and the square immediately beyond it is vacant, the piece may be captured (and removed from the game) by jumping over it.</string>

    <!-- ###SETTINGS### -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_example_switch">Example Switch</string>
    <string name="pref_example_switch_summary">Example Switch Summary</string>
    <string name="pref_example_summary">Example Summary</string>

    <!-- ###GAME###-->
    <string name="title_activity_game">Checkers</string>
    <string name="game_button_start">New Game</string>
    <string name="game_button_continue">Continue Game</string>
    <string name="game_desc">This is the default main menu for game apps. The viewpager above should be used to switch between game modes.</string>
    <string name="game_current_player_black">Black player\'s turn</string>
    <string name="game_current_player_white">White player\'s turn</string>
    <string name="game_current_player_ai">AI player\'s turn</string>

    <!-- ###WIN SCREEN###-->
    <string name="playerWinDialogTitle">Congratulations!</string>
    <string name="playerWinDialogText">You defeated the computer!</string>
    <string name="botWinDialogTitle">Not this time!</string>
    <string name="botWinDialogText">You lost to the computer.</string>
    <string name="whiteWinDialogText">White player wins!</string>
    <string name="blackWinDialogText">Black player wins!</string>
    <string name="sWinDialogBack">Back to Main Menu</string>
    <string name="sWinDialogShowBoard">Show Board</string>
    <string name="help_how_does_the_game_work">What are the rules of checkers?</string>
    <string name="help_how_can_you_move">How can I move my figures?</string>
    <string name="help_what_modes_are_there">What game modes are there?</string>

    <!-- ###LEVEL INDICATOR### -->
    <string name="setLevel">set level</string>
    <string-array name="levels">
        <item>easy</item>
        <item>moderate</item>
        <item>hard</item>
        <item>challenge</item>
        <item>professional</item>
    </string-array>
    <string name="title_game_rules">Rules</string>
    <string name="pref_title_rule_flying_king">Flying King</string>
    <string name="pref_desc_rule_flying_king">If enabled, a king may move as far as wished diagonally</string>
    <string name="pref_title_rule_white_begins">White begins</string>
    <string name="pref_desc_rule_white_begins">The first turn is made by white instead of black</string>
	<string name="dialog_goodbye_google_title">Goodbye Google Play 😢</string>
	<string name="dialog_goodbye_google_desc">Our apps will have to say goodbye to Google Play. You can continue to use the app but you will not receive any updates in the future.\nYou can find more info about the reasons and why this isn\'t the end of the Privacy Friendly Apps on our website:\n\n<a href="https://secuso.aifb.kit.edu/english/2809.php">Click here to learn more</a></string>
	<string name="dialog_goodbye_google_deactivate_notice">Don\'t show this notice again.</string>
</resources>
